<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/backgrounds"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_marginTop="20px"
        android:id="@+id/goldRevenueList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/no_get_gold"
        android:layout_marginLeft="43px"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="26px"
            android:layout_marginTop="42px"
            android:textColor="@color/white"
            android:text="@string/no_get_Golad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="26px"
            android:textColor="@color/white"
            android:text="@string/no_get_Golad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="26px"
            android:textColor="@color/white"
            android:layout_marginLeft="26px"
            android:text="@string/no_get_Golad3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>