<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgrounds"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   <TextView
       android:textSize="26px"
       android:layout_marginTop="15px"
       android:layout_marginLeft="10px"
       style="@style/textViewStyle"
       android:text="@string/my_gold_text"/>

      <LinearLayout
          android:id="@+id/gold_payments"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
         <TextView
             android:id="@+id/total_score"
             style="@style/commonTvstyle"
             android:layout_marginTop="12px"
             android:text="@string/my_gold"
             android:textSize="32px"
             android:textColor="@color/gold_color"
             android:layout_marginLeft="45px" />
         <ImageView
             android:layout_marginTop="20.66px"
             android:layout_marginLeft="10px"
             android:layout_width="15px"
             android:layout_height="30px"
             android:src="@drawable/back"/>
      </LinearLayout>

   </LinearLayout>
   <View
       style="@style/horizontal_line"/>

      <ImageView
          android:id="@+id/iv_open"
          android:src="@drawable/openbox"
          android:layout_marginTop="6px"
          android:layout_marginLeft="40px"
          android:layout_marginRight="40px"
          android:layout_width="160px"
          android:visibility="gone"
          android:layout_height="160px"/>

      <com.xxun.view.GifTempletView
          android:id="@+id/open_bag"
          android:layout_marginTop="6px"
          android:layout_marginLeft="40px"
          android:layout_marginRight="40px"
          android:layout_width="160px"
          android:visibility="visible"
          android:layout_height="160px"/>

   <ImageView
       android:layout_marginLeft="110px"
       android:layout_marginRight="111px"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal = "true"
       android:src="@drawable/xb"/>


<TextView
    android:text="@string/every_day_task"
    android:layout_marginLeft="6px"
    android:textSize="26px"
    style="@style/textViewStyle" />
   <View
       android:id="@+id/line1"
       android:layout_marginTop="4.5px"
       style="@style/horizontal_lines"/>
  <!-- 每次加载都会在scrollview顶部blocksDescendants-->
   <ListView
       android:id="@+id/list_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent" />
</LinearLayout>
</ScrollView>
